# competitive-programming

./: .gitignore  README.md
codeforces/c/: Bit++.c  CMakeLists.txt  Domino_piling.c  Even_Odds.c  Football.c  HQ9+.c  Next_Round.c  Pupils_Redistribution.c  Shell_Game.c
codeforces/cpp/: -useful_templates.cpp  1-2-K_Game.cpp  11_useful_templates.cpp  1709.cpp  1_useful_templates.cpp  AAA_useful_templates.cpp  ABBC_or_BACB.cpp  AGAGA_XOOORRR.cpp  Above_the_Clouds.cpp  Add_One.cpp  Advertising_Agency.cpp  Air_Conditioner.cpp  Alice's_Adventures_in_Chess.cpp  Alice's_Adventures_in_Permuting.cpp  Alice,_Bob_and_Chocolate.cpp  Alice_and_Bob.cpp  Almost_All_Divisors.cpp  Almost_Identity_Permutations.cpp  Alternating_Current.cpp  Alyona_and_Spreadsheet.cpp  Alyona_and_the_Tree.cpp  Anadi_and_Domino.cpp  And_Matching.cpp  Andryusha_and_Colored_Balloons.cpp  Anton_and_Chess.cpp  Anton_and_Danik.cpp  Anton_and_Digits.cpp  Anton_and_Making_Potions.cpp  Anton_and_currency_you_all_know.cpp  AquaMoon_and_Strange_Sort.cpp  Archer.cpp  Arpa's_loud_Owf_and_Mehrdad's_evil_plan.cpp  Arpa_and_a_research_in_Mexican_wave.cpp  Arpa_and_an_exam_about_geometry.cpp  Arpa’s_obvious_problem_and_Mehrdad’s_terrible_solution.cpp  Array_Rearrangment.cpp  Array_Recoloring.cpp  Array_Splitting.cpp  Array_Walk.cpp  Arrival_of_the_General.cpp  (+486 more)
codeforces/java/: ArpasHardExamAndMehrdadsNaiveCheat.java  BookReading.java  Compote.java  Decoding.java  DisplaySize.java  InsomniaCure.java  MammothsGenomeDecoding.java  OstapAndGrasshopper.java  (+2 more)
potyczki_algorytmiczne/: AkwariumC.cpp  MigawkaC.cpp  Zbiory_1RP.cpp
(+321 files in other folders)
