cmake_minimum_required(VERSION 3.29)
project(codeforces C)

set(CMAKE_C_STANDARD 11)

add_executable(Bit++ Bit++.c)
add_executable(Next_Round Next_Round.c)
add_executable(Domino_piling Domino_piling.c)
add_executable(Football Football.c)
add_executable(Even_Odds Even_Odds.c)
add_executable(HQ9+ HQ9+.c)